--- a/check.html
+++ b/check.html
@@ -41,10 +41,10 @@
 
                 function getWordPaths(word) {
                     word = word.split('');
-                    let paths = [];
+                    const paths = [];
                     for (let x = 0; x < width; ++x) {
                         for (let y = 0; y < height; ++y) {
-                            let path = []
+                            const path = []
                             traverseTree(x, y, [...word], path);
                             if (path.length === word.length) {
                                 paths.push(path);
@@ -65,7 +65,7 @@
                     const paths = getWordPaths(word);
                     for (const path of paths) {
                         for (const coord of path) {
-                            let cell = document.querySelector(`#cell-${coord.x}-${coord.y}`);
+                            const cell = document.querySelector(`#cell-${coord.x}-${coord.y}`);
                             cell.className = 'highlight';
                         }
                     }
